--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -26,76 +26,30 @@ html, body {
     opacity: 1;
 }
 
-.btn-mic {
-   border: 2px solid black;
-   background-color: white;
-   color: black;
-}
-
-.btn-mic.active {
-   border: 2px solid black;
-   background-color: black;
-   color: white;
-}
-
-.btn-reload {
-   border: 2px solid black;
-   background-color: white;
-   color: black;
-}
-
+.btn-left:hover,
+.btn-up:hover,
+.btn-right:hover,
+.btn-down:hover,
+.btn-anotacoes:hover ,
+.btn-camera:hover,
+.btn-delete:hover,
+.btn-player:hover,
+.btn-mic.active,
 .btn-reload.active {
    border: 2px solid black;
    background-color: black;
    color: white;
 }
 
-.btn-player {
-   border: 2px solid black;
-   background-color: white;
-   color: black;
-}
-
-.btn-player:hover {
-   border: 2px solid black;
-   background-color: black;
-   color: white;
-}
-
-.btn-delete {
-   border: 2px solid black;
-   background-color: white;
-   color: black;
-}
-
-.btn-delete:hover {
-   border: 2px solid black;
-   background-color: black;
-   color: white;
-}
-
+.btn-anotacoes,
+.btn-mic,
+.btn-reload,
+.btn-player,
+.btn-delete ,
 .btn-camera {
    border: 2px solid black;
    background-color: white;
    color: black;
-}
-
-.btn-camera:hover {
-   border: 2px solid black;
-   background-color: black;
-   color: white;
-}
-
-.btn-anotacoes {
-   border: 2px solid black;
-   background-color: white;
-   color: black;
-}
-
-.btn-anotacoes:hover {
-   border: 2px solid black;
-   background-color: black;
-   color: white;
 }
 
 .btn-left {
@@ -172,6 +126,10 @@ html, body {
    border-radius: 50%;
    z-index: 9999;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.btn-left:hover {
+
 }
 
 .float-center{
