--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -261,7 +261,7 @@ html, body {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.owner-info {
+owner-info {
    position: fixed;
    top: 10vw;
    font-size: 20px;
@@ -285,6 +285,16 @@ html, body {
 .version-info {
    position: fixed;
    bottom: 0vw;
+   font-size: 15px;
+   left: 5vw;
+   width: 40vw;
+   text-align: left;
+   z-index: 9999;
+}
+
+.server-info {
+   position: fixed;
+   bottom: 35vw;
    font-size: 15px;
    left: 5vw;
    width: 40vw;
