--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -161,10 +161,6 @@ html, body {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.btn-left:hover {
-
-}
-
 .float-center{
    position: fixed;
    display: flex;
@@ -261,7 +257,7 @@ html, body {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-owner-info {
+.owner-info {
    position: fixed;
    top: 10vw;
    font-size: 20px;
@@ -294,7 +290,7 @@ owner-info {
 
 .server-info {
    position: fixed;
-   bottom: 35vw;
+   bottom: 25vw;
    font-size: 15px;
    left: 5vw;
    width: 40vw;
