--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -123,12 +123,12 @@ html, body {
    justify-content: center;
    align-items: center;
    bottom: 7.5vw;
-   left: 42.5vw;
-   width: 15vw;
+   left: 40vw;
+   width: 20vw;
    height: 20vw;
    max-width: 10vh;
    max-height: 10vh;
-   border-radius: 10px;
+   border-radius: 50%;
    z-index: 9999;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
@@ -161,12 +161,12 @@ html, body {
    justify-content: center;
    align-items: center;
    bottom: 10vw;
-   left: 57.5vw;
+   left: 60vw;
    width: 15vw;
    height: 15vw;
    max-width: 10vh;
    max-height: 10vh;
-   border-radius: 10px;
+   border-radius: 50%;
    z-index: 9999;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
