--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -71,6 +71,8 @@ html, body {
    color: white;
 }
 
+.btn-horn:hover,
+.btn-lights:hover,
 .btn-left:hover,
 .btn-right:hover,
 .btn-anotacoes:hover ,
@@ -84,6 +86,8 @@ html, body {
    color: white;
 }
 
+.btn-horn,
+.btn-lights,
 .btn-anotacoes,
 .btn-mic,
 .btn-reload,
@@ -178,6 +182,38 @@ html, body {
    align-items: center;
    bottom: 30vw;
    left: 60vw;
+   width: 15vw;
+   height: 15vw;
+   max-width: 25vh;
+   max-height: 25vh;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.float-center-2 {
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 30vw;
+   left: 40vw;
+   width: 15vw;
+   height: 15vw;
+   max-width: 25vh;
+   max-height: 25vh;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.float-center-3 {
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 30vw;
+   left: 20vw;
    width: 15vw;
    height: 15vw;
    max-width: 25vh;
