--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -423,6 +423,18 @@ html, body {
       left: 70vw;
       bottom: 10vh;
   }
+  float-center-2 {
+      left: 70vw;
+      bottom: 10vh;
+  }
+  float-center-3 {
+      left: 70vw;
+      bottom: 10vh;
+  }
+  float-center-4 {
+      left: 70vw;
+      bottom: 10vh;
+  }
   .float-right {
       bottom: 5vh;
   }
@@ -440,6 +452,9 @@ html, body {
   }
   .icone-v3 {
       top: 5vw;
+  }
+  .btn {
+      display: none;
   }
 }
 
