--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -22,7 +22,14 @@ html, body {
     width: 300px
     height: 100px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items: stretch;
     flex-direction: row;
+}
+
+#btn-like {
+
+}
+
+#btn-dislike {
+
 }
