--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -22,6 +22,7 @@ html, body {
     width: 300px
     height: 100px;
     display: flex;
+    justify-content: stretch;
     align-items: stretch;
     flex-direction: row;
 }
