--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -16,6 +16,7 @@ html, body {
     width: 300px;
     height: 200px;
     border: 2px black solid;
+    border-radius: 10px;
 }
 
 #buttons {
@@ -32,6 +33,8 @@ html, body {
     flex-direction: row;
     background-color: #405d27;
     color: white;
+    border: 0px;
+    border-radius: 10px;
 }
 
 #btn-dislike {
@@ -40,4 +43,6 @@ html, body {
     flex-direction: row;
     background-color: #c94c4c;
     color: white;
+    border: 0px;
+    border-radius: 10px;
 }
