--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -24,6 +24,7 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: #fff;
 }
 
 #signature {
