--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -17,6 +17,7 @@ html, body {
     font-family: 'VT323', monospace !important;
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 100%;
     font-size: 30px;
     font-weight: 400 !important;
