--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -10,6 +10,7 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 #restart {
@@ -26,6 +27,7 @@ html, body {
     align-items: center;
     flex-direction: column;
     background-color: #fff;
+    color: white;
 }
 
 #signature {
