--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -11,7 +11,7 @@ html, body {
     align-items: center;
     flex-direction: column;
     text-align: center;
-    background-color: #2f2e40;
+    background-color: #9AC601;
     color: white;
 }
 
