--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -54,7 +54,7 @@ html, body {
    display: flex;
     justify-content: space-around;
     flex-direction: row;
-    background-color: #405d27;
+    background-color: #36486b;
     color: white;
     border: 2px solid #000;
     border-radius: 10px;
