--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -80,5 +80,7 @@ html, body {
 #hand {
     width: 50px;
     height: 50px;
-    display: contents;
+    position: absolute;
+    margin-top: -5px;
+    margin-left: 10px;
 }
