--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -81,6 +81,7 @@ html, body {
     width: 50px;
     height: 50px;
     position: absolute;
+    display: block;
     margin-top: -5px;
     margin-left: 10px;
 }
