--- a/forca/css/style.css
+++ b/forca/css/style.css
@@ -33,6 +33,11 @@ html, body {
 }
 
 #board {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 300px;
     height: 200px;
     border: 1px black solid;
@@ -41,8 +46,8 @@ html, body {
 }
 
 .letter {
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     border: 2px black solid;
     display: flex;
     justify-content: center;
