--- a/digite/css/style.css
+++ b/digite/css/style.css
@@ -116,3 +116,30 @@ html, body {
    height: 6px;
    background-color: #f00;
 }
+
+#fire {
+   width: 50px;
+   height: 50px;
+   position: absolute;
+   display: block;
+   margin-top: -50px;
+   margin-left: -100px;
+   animation: myAnim 2s ease 0s infinite normal forwards;
+}
+
+@keyframes myAnim {
+  0% {
+    opacity: 1;
+    margin-left: -100px;
+  }
+
+  50% {
+    opacity: 0.2;
+    margin-left: -50px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0px;
+  }
+}
