--- a/digite/css/style.css
+++ b/digite/css/style.css
@@ -119,22 +119,24 @@ html, body {
 
 #fire {
    width: 50px;
-   height: 50px;
+   height: 80px;
    position: absolute;
    display: block;
    margin-top: -50px;
    margin-left: -100px;
+   transform: rotate(-90deg);
    animation: myAnim 2s ease 0s infinite normal forwards;
+   
 }
 
 @keyframes myAnim {
   0% {
-    opacity: 1;
+    opacity: 0.25;
     margin-left: -100px;
   }
 
   50% {
-    opacity: 0.2;
+    opacity: 0.5;
     margin-left: -50px;
   }
 
