--- a/digite/css/style.css
+++ b/digite/css/style.css
@@ -125,7 +125,7 @@ html, body {
    margin-top: -50px;
    margin-left: -150px;
    transform: rotate(-90deg);,
-   animation: myAnim 2s liner 0s 1 normal forwards;
+   animation: myAnim 2s linear 0s 1 normal forwards;
 }
 
 @keyframes myAnim {
