--- a/digite/css/style.css
+++ b/digite/css/style.css
@@ -80,6 +80,12 @@ html, body {
     padding: 10px;
 }
 
+#type-area input {
+   color: white;
+   border: 2px solid #000;
+   background-color: #212026;
+}
+
 #btn-done {
    display: flex;
     justify-content: space-around;
@@ -87,7 +93,6 @@ html, body {
     background-color: #36486b;
     color: white;
     border: 2px solid #000;
-    border-radius: 10px;
     padding: 10px;
 }
 
