--- a/digite/css/style.css
+++ b/digite/css/style.css
@@ -82,7 +82,7 @@ html, body {
 
 #type-area input {
    color: white;
-   border: 2px solid #000;
+   border: 1px solid #000;
    background-color: #212026;
 }
 
@@ -92,7 +92,8 @@ html, body {
     flex-direction: row;
     background-color: #36486b;
     color: white;
-    border: 2px solid #000;
+    border: 1px solid #000;
+    border-left: 0px;
     padding: 10px;
 }
 
@@ -130,7 +131,7 @@ html, body {
    opacity: 0;
    margin-top: 250px;
    margin-left: 150px;
-   transform: rotate(-300deg);
+   transform: rotate(-230deg);
 }
 
 #fire.animate {
