--- a/game/css/style.css
+++ b/game/css/style.css
@@ -19,3 +19,45 @@ html, body {
   width: 100px;
   height: 100px;
 } 
+
+.gear {
+  width: 50px;
+  height: 50px;
+  filter: invert(100%);
+} 
+
+.spin {
+  animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+}
+
+.beat {
+  animation: heartbeat 1s infinite;
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+@keyframes heartbeat {
+  0% {
+    transform: scale( 1 );    
+  }
+  20% {
+    transform: scale( 1.25 ) 
+      translateX(5%) 
+      translateY(5%);
+  } 
+  40% {
+    transform: scale( 1.5 ) 
+      translateX(9%) 
+      translateY(10%);
+  }
+}
