--- a/game/css/style.css
+++ b/game/css/style.css
@@ -48,16 +48,28 @@ html, body {
 
 @keyframes heartbeat {
   0% {
-    transform: scale( 1 );    
+    animation-timing-function: ease-out;
+    transform: scale(1);
+    transform-origin: center center;
   }
-  20% {
-    transform: scale( 1.25 ) 
-      translateX(5%) 
-      translateY(5%);
-  } 
-  40% {
-    transform: scale( 1.5 ) 
-      translateX(9%) 
-      translateY(10%);
+
+  10% {
+    animation-timing-function: ease-in;
+    transform: scale(0.91);
+  }
+
+  17% {
+    animation-timing-function: ease-out;
+    transform: scale(0.98);
+  }
+
+  33% {
+    animation-timing-function: ease-in;
+    transform: scale(0.87);
+  }
+
+  45% {
+    animation-timing-function: ease-out;
+    transform: scale(1);
   }
 }
