--- a/game/css/style.css
+++ b/game/css/style.css
@@ -23,11 +23,18 @@ html, body {
 .gear {
   width: 50px;
   height: 50px;
-  margin: -4px;
+  margin: -3px;
   filter: invert(100%);
 } 
 
 .spin {
+  animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+}
+
+.spin-reverse {
   animation-name: spin;
   animation-duration: 5000ms;
   animation-iteration-count: infinite;
@@ -44,6 +51,15 @@ html, body {
     }
     to {
         transform:rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(-360deg);
     }
 }
 
