--- a/game/css/style.css
+++ b/game/css/style.css
@@ -23,7 +23,7 @@ html, body {
 .gear {
   width: 50px;
   height: 50px;
-  margin: -3px;
+  margin: -2px;
   filter: invert(100%);
 } 
 
@@ -35,7 +35,7 @@ html, body {
 }
 
 .spin-reverse {
-  animation-name: spin;
+  animation-name: spin-reverse;
   animation-duration: 5000ms;
   animation-iteration-count: infinite;
   animation-timing-function: linear; 
@@ -54,7 +54,7 @@ html, body {
     }
 }
 
-@keyframes spin {
+@keyframes spin-reverse {
     from {
         transform:rotate(0deg);
     }
