--- a/game/css/style.css
+++ b/game/css/style.css
@@ -27,6 +27,15 @@ html, body {
   filter: invert(100%);
 } 
 
+.gears {
+  display: flex;
+   justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 150px;
+  height: 50px;
+} 
+
 .spin {
   animation-name: spin;
   animation-duration: 5000ms;
