--- a/game/css/style.css
+++ b/game/css/style.css
@@ -33,7 +33,9 @@ html, body {
   align-items: center;
   flex-direction: row;
   width: 150px;
-  height: 50px;
+  height: 100px;
+  border: 2px solid black;
+  border-radius: 5px;
 } 
 
 .spin {
