--- a/game/css/style.css
+++ b/game/css/style.css
@@ -33,9 +33,10 @@ html, body {
   align-items: center;
   flex-direction: row;
   width: 150px;
-  height: 100px;
+  height: 50px;
   border: 2px solid black;
   border-radius: 5px;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 } 
 
 .spin {
