--- a/game/css/style.css
+++ b/game/css/style.css
@@ -27,9 +27,27 @@ html, body {
   filter: invert(100%);
 } 
 
-.gears {
+.gear-place-container {
   display: flex;
-   justify-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50px;
+  height: 50px;
+  margin: -2px;
+} 
+
+.gear-place {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: white;
+} 
+
+.gears {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   width: 150px;
