--- a/game/css/style.css
+++ b/game/css/style.css
@@ -30,7 +30,7 @@ html, body {
 } 
 
 .gear-place-container {
-  position: relative;
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
