--- a/game/css/style.css
+++ b/game/css/style.css
@@ -22,7 +22,16 @@ html, body {
   filter: grayscale(100%);
 } 
 
+.heart:nth-of-type(1) {
+  margin-left: -92px;
+}
+
+.heart:nth-of-type(3) {
+  margin-left: 92px;
+}
+
 .gear {
+  position: absolute;
   width: 50px;
   height: 50px;
   margin: -2px;
