--- a/game/css/style.css
+++ b/game/css/style.css
@@ -22,14 +22,6 @@ html, body {
   filter: grayscale(100%);
 } 
 
-.heart:nth-of-type(1) {
-  margin-left: -92px;
-}
-
-.heart:nth-of-type(3) {
-  margin-left: 92px;
-}
-
 .gear {
   position: absolute;
   width: 50px;
@@ -37,6 +29,16 @@ html, body {
   margin: -2px;
   filter: invert(100%);
 } 
+
+/*
+.gear:nth-of-type(1) {
+  margin-left: -92px;
+}
+
+.gear:nth-of-type(3) {
+  margin-left: 92px;
+}
+*/
 
 .gear-place-container {
   position: absolute;
