--- a/game/css/style.css
+++ b/game/css/style.css
@@ -52,11 +52,11 @@ html, body {
 } 
 
 .gear-place-container:nth-of-type(1) {
-  margin-left: -92px;
+  margin-left: -96px;
 }
 
 .gear-place-container:nth-of-type(3) {
-  margin-left: 92px;
+  margin-left: 96px;
 }
 
 .gear-place {
@@ -69,8 +69,8 @@ html, body {
 .gears {
   margin-top: 20px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   flex-direction: row;
   width: 150px;
   height: 50px;
