--- a/game/css/style.css
+++ b/game/css/style.css
@@ -69,8 +69,8 @@ html, body {
 .gears {
   margin-top: 20px;
   display: flex;
-  justify-content: left;
-  align-items: left;
+  justify-content: center;
+  align-items: center;
   flex-direction: row;
   width: 150px;
   height: 50px;
