--- a/game/css/style.css
+++ b/game/css/style.css
@@ -33,6 +33,10 @@ html, body {
   margin-left: -94px;
 }
 
+.gear.spin:nth-of-type(2) {
+  margin-left: 0px;
+}
+
 .gear.spin:nth-of-type(3) {
   margin-left: 94px;
 }
