--- a/game/css/style.css
+++ b/game/css/style.css
@@ -30,15 +30,15 @@ html, body {
 } 
 
 .gear.spin:nth-of-type(1) {
-  margin-left: 0px;
+  left: 0px;
 }
 
 .gear.spin:nth-of-type(2) {
-  margin-left: 50px;
+  left: 50px;
 }
 
 .gear.spin:nth-of-type(3) {
-  margin-left: 100px;
+  left: 100px;
 }
 
 .gear-place-container {
@@ -52,15 +52,15 @@ html, body {
 } 
 
 .gear-place-container:nth-of-type(1) {
-  margin-left: 0px;
+  left: 0px;
 }
 
 .gear-place-container:nth-of-type(2) {
-  margin-left: 50px;
+  left: 50px;
 }
 
 .gear-place-container:nth-of-type(3) {
-  margin-left: 100px;
+  left: 100px;
 }
 
 .gear-place {
