--- a/game/css/style.css
+++ b/game/css/style.css
@@ -29,16 +29,16 @@ html, body {
   filter: invert(100%);
 } 
 
-.gear.spin:nth-of-type(1) {
+.gear.placed:nth-of-type(1) {
+  left: -94px;
+}
+
+.gear.placed:nth-of-type(2) {
   left: 0px;
 }
 
-.gear.spin:nth-of-type(2) {
-  left: 50px;
-}
-
-.gear.spin:nth-of-type(3) {
-  left: 100px;
+.gear.placed:nth-of-type(3) {
+  left: -94px;
 }
 
 .gear-place-container {
@@ -52,15 +52,15 @@ html, body {
 } 
 
 .gear-place-container:nth-of-type(1) {
-  left: 0px;
+  margin-left: -94px;
 }
 
 .gear-place-container:nth-of-type(2) {
-  left: 50px;
+  margin-left: 0px;
 }
 
 .gear-place-container:nth-of-type(3) {
-  left: 100px;
+  margin-left: 94px;
 }
 
 .gear-place {
@@ -71,6 +71,10 @@ html, body {
 } 
 
 .gears {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
   margin-top: 20px;
   width: 150px;
   height: 50px;
