--- a/game/css/style.css
+++ b/game/css/style.css
@@ -30,15 +30,15 @@ html, body {
 } 
 
 .gear.placed:nth-of-type(1) {
-  left: -94px;
+  margin-left: -94px;
 }
 
 .gear.placed:nth-of-type(2) {
-  left: 0px;
+  margin-left: 0px;
 }
 
 .gear.placed:nth-of-type(3) {
-  left: 94px;
+  margin-left: 94px;
 }
 
 .gear-place-container {
