--- a/game/css/style.css
+++ b/game/css/style.css
@@ -26,6 +26,7 @@ html, body {
   position: absolute;
   width: 50px;
   height: 50px;
+  -webkit-filter: invert(100%); /* Safari 6.0 - 9.0 */
   filter: invert(100%);
 } 
 
