--- a/game/css/style.css
+++ b/game/css/style.css
@@ -26,6 +26,10 @@ html, body {
   position: absolute;
   width: 50px;
   height: 50px;
+  background-image: url("img/gear.png");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; 
   -webkit-filter: invert(100%); /* Safari 6.0 - 9.0 */
   filter: invert(100%);
 } 
