--- a/game/css/style.css
+++ b/game/css/style.css
@@ -26,7 +26,7 @@ html, body {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-image: url("img/gear.png");
+  background-image: url("../img/gear.png");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; 
