--- a/game/css/style.css
+++ b/game/css/style.css
@@ -28,21 +28,21 @@ html, body {
   height: 50px;
   background-image: url("../img/gear.png");
   background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-repeat: no-repeat; 
   background-size: cover; 
   -webkit-filter: invert(100%); /* Safari 6.0 - 9.0 */
   filter: invert(100%);
 } 
 
-.gear.placed:nth-of-type(1) {
+.placed:nth-of-type(1) {
   margin-left: 0px;
 }
 
-.gear.placed:nth-of-type(2) {
+.placed:nth-of-type(2) {
   margin-left: 94px;
 }
 
-.gear.placed:nth-of-type(3) {
+.placed:nth-of-type(3) {
   margin-left: -94px;
 }
 
