--- a/game/css/style.css
+++ b/game/css/style.css
@@ -34,15 +34,15 @@ html, body {
   filter: invert(100%);
 } 
 
-.placed:nth-of-type(1) {
+.gear.placed:nth-of-type(1) {
   margin-left: 0px;
 }
 
-.placed:nth-of-type(2) {
+.gear.placed:nth-of-type(2) {
   margin-left: 94px;
 }
 
-.placed:nth-of-type(3) {
+.gear.placed:nth-of-type(3) {
   margin-left: -94px;
 }
 
