--- a/game/css/style.css
+++ b/game/css/style.css
@@ -34,15 +34,15 @@ html, body {
   filter: invert(100%);
 } 
 
-.gear.placed:nth-of-type(1) {
+.gear.placed:nth-of-type(1n) {
   margin-left: 0px;
 }
 
-.gear.placed:nth-of-type(2) {
+.gear.placed:nth-of-type(2n) {
   margin-left: 94px;
 }
 
-.gear.placed:nth-of-type(3) {
+.gear.placed:nth-of-type(3n) {
   margin-left: -94px;
 }
 
@@ -56,15 +56,15 @@ html, body {
   height: 50px;
 } 
 
-.gear-place-container:nth-of-type(1) {
+.gear-place-container:nth-of-type(1n) {
   margin-left: 94px;
 }
 
-.gear-place-container:nth-of-type(2) {
+.gear-place-container:nth-of-type(2n) {
   margin-left: 0px;
 }
 
-.gear-place-container:nth-of-type(3) {
+.gear-place-container:nth-of-type(3n) {
   margin-left: -94px;
 }
 
