--- a/game/css/style.css
+++ b/game/css/style.css
@@ -19,14 +19,14 @@ div.heart-border {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 104px;
-  height: 104px;
+  width: 110px;
+  height: 110px;
 } 
 
 img.heart-border {
   position: absolute;
-  width: 104px;
-  height: 104px;
+  width: 110px;
+  height: 110px;
   -webkit-filter: brightness(0); /* Safari 6.0 - 9.0 */
   filter: brightness(0);
 } 
@@ -119,8 +119,8 @@ img.heart-border {
 }
 
 .beat {
-  -webkit-filter: grayscale(0%) drop-shadow(0 0 0.75rem crimson); /* Safari 6.0 - 9.0 */
-  filter: grayscale(0%) drop-shadow(0 0 0.75rem crimson);
+  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(0%);
   animation: heartbeat 1s infinite;
 }
 
