--- a/talking-bot/css/style.css
+++ b/talking-bot/css/style.css
@@ -16,18 +16,18 @@ html, body {
 }
 
 .btn-mic.active {
-   border: 2px solid black;
-   background-color: black;
-   color: white;
+    border: 2px solid black;
+    background-color: black;
+    color: white;
 }
 
 .btn-mic {
-   border: 2px solid black;
-   background-color: white;
-   color: black;
+    border: 2px solid black;
+    background-color: white;
+    color: black;
 }
 
 .wave {
-  width: 90vw;
-  height: 100px;
+    width: 200px;
+    height: 200px;
 }
