--- a/talking-bot/css/style.css
+++ b/talking-bot/css/style.css
@@ -15,15 +15,13 @@ html, body {
     color: white;
 }
 
-.btn-file:hover,
-.btn-mic.active {
+.btn.active {
     border: 2px solid black;
     background-color: black;
     color: white;
 }
 
-.btn-file,
-.btn-mic {
+.btn {
     border: 2px solid black;
     background-color: white;
     color: black;
