--- a/talking-bot/css/style.css
+++ b/talking-bot/css/style.css
@@ -32,3 +32,25 @@ html, body {
     height: 100px;
 }
 
+@-webkit-keyframes leftIn { 
+    0% { -webkit-transform: translateX(100%); opacity: 1; }
+    100% { -webkit-transform: translateX(0%); opacity: 1; }
+} 
+@keyframes leftIn { 
+    0% { transform: translateX(100%); opacity: 0; } 
+    100% { transform: translateX(0%); opacity: 1; } 
+} 
+animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+.leftIn { 
+    -webkit-animation-name: rightIn; 
+    animation-name: rightIn; 
+} 
+.animated.leftIn { 
+    -webkit-animation-duration: 1s; 
+    animation-duration: 1s; 
+}
