--- a/flip-funnel/css/style.css
+++ b/flip-funnel/css/style.css
@@ -88,6 +88,42 @@ html, body {
     -webkit-transform-style: preserve-3d;
     transform: translate3d(0px, 0px, -3px);
 }
+.left {
+    position: absolute;
+    background-color: #6E4F2F;
+    border: 2px solid #000;
+    width: 10px;
+    height: 64px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateY(-25px) rotateY(90deg) rotateX(90deg) ;
+}
+.top {
+    position: absolute;
+    background-color: #6E4F2F;
+    border: 2px solid #000;
+    width: 10px;
+    height: 64px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateX( -25px) rotateY(90deg);
+}
+.right {
+    position: absolute;
+    background-color: #6E4F2F;
+    border: 2px solid #000;
+    width: 10px;
+    height: 64px;
+    -webkit-transform-style: preserve-3d;
+    transform: translateY(25px) rotateY(90deg) rotateX(90deg);
+}
+.bottom {
+    position: absolute;
+    background-color: #6E4F2F;
+    border: 2px solid #000;
+    width: 10px;
+    height: 64px;
+    -webkit-transform-style: preserve-3d;
+    transform:  translateX(25px) rotateY(90deg);
+}
 
 #camera-canvas {
     display: flex;
