--- a/flip-funnel/css/style.css
+++ b/flip-funnel/css/style.css
@@ -90,39 +90,39 @@ html, body {
 }
 .left {
     position: absolute;
-    background-color: #6E4F2F;
+    background-color: #ccc;
     border: 2px solid #000;
     width: 10px;
     height: 64px;
     -webkit-transform-style: preserve-3d;
-    transform: translateY(-25px) rotateY(90deg) rotateX(90deg) ;
+    transform: translateY(-32px) rotateY(90deg) rotateX(90deg) ;
 }
 .top {
     position: absolute;
-    background-color: #6E4F2F;
+    background-color: #ccc;
     border: 2px solid #000;
     width: 10px;
     height: 64px;
     -webkit-transform-style: preserve-3d;
-    transform: translateX( -25px) rotateY(90deg);
+    transform: translateX( -32px) rotateY(90deg);
 }
 .right {
     position: absolute;
-    background-color: #6E4F2F;
+    background-color: #ccc;
     border: 2px solid #000;
     width: 10px;
     height: 64px;
     -webkit-transform-style: preserve-3d;
-    transform: translateY(25px) rotateY(90deg) rotateX(90deg);
+    transform: translateY(32px) rotateY(90deg) rotateX(90deg);
 }
 .bottom {
     position: absolute;
-    background-color: #6E4F2F;
+    background-color: #ccc;
     border: 2px solid #000;
     width: 10px;
     height: 64px;
     -webkit-transform-style: preserve-3d;
-    transform:  translateX(25px) rotateY(90deg);
+    transform:  translateX(32px) rotateY(90deg);
 }
 
 #camera-canvas {
