--- a/cube-desfinder/css/style.css
+++ b/cube-desfinder/css/style.css
@@ -79,7 +79,7 @@ html, body {
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
-    transform: translateX(-64px) rotateY(90deg);
+    transform: translateY(-64px) rotateY(90deg);
 }
 .right {
     position: absolute;
@@ -88,7 +88,7 @@ html, body {
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
-    transform: translateY(64px) rotateY(90deg) rotateX(90deg);
+    transform: translateX(64px) rotateY(90deg) rotateX(90deg);
 }
 .bottom {
     position: absolute;
@@ -97,7 +97,7 @@ html, body {
     width: 128px;
     height: 128px;
     -webkit-transform-style: preserve-3d;
-    transform:  translateX(64px) rotateY(90deg);
+    transform:  translateY(64px) rotateY(90deg);
 }
 
 #camera-canvas {
